Update readme, add prepared jars with running scripts.