@@ -1,10 +1,42 @@
-# FirstStory
-First Story - project of an RPG written in Java. 
-Fundamental sub-projects:
-Client application -> /FirstSlave
-Server application -> /FirstMaster
-Graphic Engine -> /FirstOracle
-Game Engine -> /FirstUniverse
+# First Story
+First Story is the project of an Isometric RPG. 
+Inspired by old classics like Might and Magic or Final Fantasy, but also new ones like Disgaea.
+The game is written in mostly pure Java with only Graphic engine using either OpenGL or Vulkan for rendering.
+The main idea behind is to create low fantasy world with as realistic as possible simulation of life with unique fighting styles. 
 
+
+First Story project is divided into sub projects:
++ First Slave is game client
++ First Master is server backend
++ First Oracle is graphic engine
++ Game Engine -> /FirstUniverse
+
+Currently only First Oracle is in active development.
+
+## First Oracle 
+First Oracle as mentioned earlier is graphic engine written in Java, OpenGL and Vulkan.
+While it's developed for First Story, 
+the main goal is to provide easy interface for developing any 2D/3D application
+with ability to put all the objects to render and not worry about any optimisation.
+While engine does not have many graphic effects, it is developed to support huge ammounts of simple shapes with textures. 
+This would provide nice ability to build huge worlds with small blocks.
+Isometric view is meant to easily extend 2D environment with discrete levels to deliver 2.5D feel.
+
+If you would want to try to check out just the graphic engine head to [releases](FirstOracle/release)
+and try one of many launchers that can show some of the features. 
+See [requirements](##Requirements) to check what need before running them.
+
+But if you want to see the code that drives the game, then it is best to start with templates that are under this 
+[directory](FirstOracle\FirstOracle-Engine\src\main\java\com\firststory\firstoracle\templates)
+
+## Requirements
+Currently the project is developed with Java 12 and it's preview features so most likely you head out to
+OpenJDK [site](https://jdk.java.net/12/) and download the newest build for your system. 
+Running the application by hand is a bit problematic at the moment 
+due to omnipresent `--enable-preview` when compiling or running the application.
+So if you have any problem, most likely just check out scripts in First Oracle [releases](FirstOracle/release)
+for examples with parameters on how to run it.
+
+For compiling application Maven is also needed to take care of dependencies. You might need new maven version due to Java 12
 
 
